--- a/index.html
+++ b/index.html
@@ -10,7 +10,27 @@
 
 <body>
     <h1>Loterija</h1>
-    <script src="script.js"></script>
+    <div class="wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <td>Nr.</td>
+                    <td>Uzvaretājs.</td>
+                    <td>Laimesti.</td>
+                </tr>
+   
+
+<tbody class = "rindas">
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</thead>
+</div>
+ <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffitzmuseum.cam.ac.uk%2Fnews%2Fthank-you-to-national-lottery-players&psig=AOvVaw1UBPNeIs9WNRugoKDp_TSv&ust=1644584390102000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNj-67SY9fUCFQAAAAAdAAAAABAO" alt="Italian Trulli">
+<script src="script.js"></script>
+</table>
 </body>
 
 </html>
