--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
     </tr>
 </thead>
 </div>
- <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffitzmuseum.cam.ac.uk%2Fnews%2Fthank-you-to-national-lottery-players&psig=AOvVaw1UBPNeIs9WNRugoKDp_TSv&ust=1644584390102000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCNj-67SY9fUCFQAAAAAdAAAAABAO" alt="Italian Trulli">
+ 
 <script src="script.js"></script>
 </table>
+<div style="display:inline-block;vertical-align:top;">
+    <img src="https://www.national-lottery.co.uk/c/i/sharing/tnl_logo.png~9ebd" alt="Italian Trulli"/>
+    </div>
+    <div style="display:inline-block;">
+
 </body>
 
 </html>
